# inkathon

./: .dockerignore  .gitignore  .lintstagedrc.json  .npmrc  .prettierignore  .prettierrc.js  .prettierrc.json  .prettierrc.mjs  .simple-git-hooks.js  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.contracts  Dockerfile.frontend  README.md  biome.json  docker-compose.contracts.yaml  docker-compose.frontend.yaml  docker-compose.yaml  inkathon.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.changeset/: big-seals-reply.md  brave-icons-tan.md  clean-lemons-cough.md  config.json  cruel-buckets-jog.md  early-deers-dream.md  early-islands-scream.md  early-pens-itch.md  eleven-olives-compare.md  famous-eyes-beg.md  fifty-weeks-sort.md  gentle-hounds-search.md  gold-mangos-tell.md  hip-books-shop.md  huge-wolves-change.md  hungry-seals-trade.md  lazy-bags-learn.md  lazy-maps-exercise.md  little-baboons-repair.md  loud-cobras-move.md  lovely-parents-wait.md  mean-bugs-cut.md  nervous-dots-remember.md  odd-comics-compare.md  open-ads-sink.md  orange-lines-roll.md  plain-ducks-camp.md  polite-starfishes-allow.md  rare-gifts-beam.md  rotten-humans-add.md  shiny-brooms-smash.md  silver-mangos-yawn.md  solid-dots-sleep.md  stale-candies-swim.md  strange-snakes-grin.md  strong-singers-prove.md  stupid-bees-jam.md  tasty-crabs-study.md  tender-cameras-care.md  thick-countries-cheat.md  (+10 more)
contracts/: .eslintignore  .eslintrc.json  .gitignore  CHANGELOG.md  (+11 more)
contracts/src/flipper/: Cargo.toml  lib.rs
contracts/src/greeter/: Cargo.toml  lib.rs
(+208 files in other folders)
